# informed_classification

./: .gitignore  gen_data.py  pyproject.toml
informed_classification/: bayes_classifier.py  generative_models.py  naive_ml.py
tests/: test_gen_models.py
